--- a/projects.json
+++ b/projects.json
@@ -1,20 +1,26 @@
 [
-    {
-      "name": "Projeto NLW eSports da Rocketseat",
-      "image": "./assets/projeto-nlw.png",
-      "tags": ["HTML", "CSS", "JavaScript"],
-      "link": "https://github.com/SantosRobertin/Projeto-NLW-eSports"
-    },
-    {
-      "name": "Projeto NLW eSports da Rocketseat",
-      "image": "./assets/projeto-nlw.png",
-      "tags": ["HTML", "CSS", "JavaScript"],
-      "link": "https://github.com/SantosRobertin/Projeto-NLW-eSports"
-    },
-    {
-      "name": "Projeto NLW eSports da Rocketseat",
-      "image": "./assets/projeto-nlw.png",
-      "tags": ["HTML", "CSS", "JavaScript"],
-      "link": "https://github.com/SantosRobertin/Projeto-NLW-eSports"
-    }
-  ]
+  {
+    "name": "Projeto NLW eSports da Rocketseat",
+    "image": "./assets/projeto-nlw.png",
+    "tags": ["HTML", "CSS", "JavaScript"],
+    "link": "https://github.com/SantosRobertin/Projeto-NLW-eSports"
+  },
+  {
+    "name": "Meu primeiro Portfólio :)",
+    "image": "./assets/primeiroPortfolio.jpg",
+    "tags": ["HTML", "CSS", "JavaScript"],
+    "link": "https://github.com/SantosRobertin/portfolio"
+  },
+  {
+    "name": "Relógio Digital",
+    "image": "./assets/relogioDigital.jpg",
+    "tags": ["HTML", "CSS", "JavaScript"],
+    "link": "https://github.com/SantosRobertin/Relogio-Digital"
+  },
+  {
+    "name": "Calculadora de IMC",
+    "image": "./assets/calcIMC.png",
+    "tags": ["HTML", "CSS", "JavaScript"],
+    "link": "https://github.com/SantosRobertin/Calculadora-de-IMC"
+  }
+]
